--- a/nchp/templates/nginx.conf
+++ b/nchp/templates/nginx.conf
@@ -93,6 +93,8 @@ http {
         listen {{public_ip}}:{{ public_port }} {% if public_ssl %}ssl{% endif %};
 
         {% if public_ssl %}
+        ssl on;
+        server_name datahub-dev.berkeley.edu;
         ssl_protocols TLSv1.2;
         ssl_prefer_server_ciphers on;
         ssl_ciphers '-ALL:{{ public_ssl_ciphers }}';
